Update project proposal

--- a/project_specification.tex
+++ b/project_specification.tex
@@ -8,7 +8,7 @@
 \maketitle
 
 % ------------- TITLE
-\section{Preliminary Title}
+\section{Preliminary Thesis Title}
 Script Knowledge in Coreference Resolution
 
 % ------------- BACKGROUND
@@ -17,6 +17,7 @@ Script Knowledge in Coreference Resolution
 \subsection{Motivation}
 
 \subsection{Location}
+The project will be carried out at Inui-Okazaki Lab of Communication Science, Tohoku University Graduate School of Information Sciences, Sendai-shi, Miyagi, Japan.
 
 % ------------- SCIENTIFIC QUESTION
 \section{Scientific Question}
@@ -36,10 +37,11 @@ Script Knowledge in Coreference Resolution
 
 % ------------- SUPERVISOR AT TOHOKU UNIVERSITY
 \section{Supervisor at Tohoku University}
+Professor Kentaro Inui is the official supervisor and will examine the final project. I have been placed in a research group with people of varying background that I may turn to for daily practical issues and guidance. The purpose of the research group is to provide a continous feedback loop.
 
 % ------------- AVAILABLE RESOURCES
 \section{Available Resources}
-
+The laboratory at Tohokudai has access to several research paper databases that are relevant to Natural Language Processing and Machine Learning. I have also been given access to high-performance computing nodes at their department where experiments may be performed.
 
 
 \end{document}
