Update error analysis

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -7,115 +7,113 @@
 \title{WSC Error Analysis}
 \maketitle
 
-
 % ------------- SHIT STARTS HERE
 \begin{enumerate}
-\item Kung Fu teachers try to pass on discipline to their disciples since they want them to learn more than just technique.
-\item Kung Fu teachers try to pass on discipline to their disciples, but they do not always learn what they are being taught very well.
-\item The lion saw the fish and it pounced.
-The lion saw the fish and it was swimming.
-The winners were given the awards after they won.
-The winners were given the awards after they were made.
-Lakshman asked Vivan to get him some ice cream because he was hot.
-Lakshman asked Vivan to get him some ice cream because he owed him money.
-John fired Dave because he had too many absences.
-John fired Dave because he had too many employees.
-Bob kicked Larry, because he was mad.
-Bob kicked Larry, because he made a condescending comment.
-Gorden got mad at his brother because he forgot to bring him chocolate.
-Gorden got mad at his brother because he did not get good sleep.
-The Prince of Wales knighted William, so he gave his son the accolade with a sword.
-The Prince of Wales knighted William because he could not compete in the tournament without being of nobility.
-The Board of Directors fired the management from the company since they did not think they were doing a good job.
-The Board of Directors fired the management from the company since they were not managing the company well.
-Scientists have created a serum which transforms men into super soldiers, because they needed to create an unstoppable army.
-Scientists have created a serum which transforms men into super soldiers, but they may experience side effects.
-Paper beats rock, but it is beaten by scissors.
-Paper beats rock, but it is able to beat scissors.
-The bug was flying towards the light, but it was exterminated prematurely.
-The bug was flying towards the light, but it was extinguished prematurely.
-It annoyed Chris when Sebastian jangled his keys because he was in a bad mood.
-It annoyed Chris when Sebastian jangled his keys because he wanted to make fun.
-John picked Bill because he was in need of talent.
-John picked Bill because he was talented.
-The US army fought the Taliban because they are trying to prevent terrorism.
-The US army fought the Taliban because they are the root of much terrorism.
-The band connected well to their fans, so they continued to buy albums.
-The band connected well to their fans, so they continued to write albums.
-Jesus appeared to Thomas in order to show that he had risen.
-Jesus appeared to Thomas in order to show that he had unfounded doubts.
-The police arrested suspected members of Anonymous because they are accused of hacking company data.
-The police arrested suspected members of Anonymous because they are cracking down on hackers.
-A policeman saw John Edwards commit the crime, so he was arrested.
-A policeman saw John Edwards commit the crime, so he apprehended the criminal.
-The Police feared allowing the protesters to organize, so they denied their ability to gather.
-The Police feared allowing the protesters to organize, but they decided to organize anyway.
-Cosby supported Jay because Thea really liked him.
-Cosby supported Jay because Thea asked him to.
-Watson beat Ken at Jeopardy because he is a superior machine.
-Watson beat Ken at Jeopardy because he is an inferior human.
-The man gave the beggar some money because he was too persistent.
-The man gave the beggar some money because he was very generous.
-The bee landed on the flower because it had pollen.
-The bee landed on the flower because it wanted pollen.
-Coins are better than dollars because they weigh more.
-The robots tried to negotiate a cease-fire with the squirrel-men, but negotiations broke down when they sabotaged the microchip processing facility.
-The robots tried to negotiate a cease-fire with the squirrel-men, but negotiations broke down when they sabotaged the acorn processing facility.
-A mathematical equation is more influential than politics, because it will stand forever.
-A mathematical equation is more influential than politics, because it concerns only the present.
-The boy laughed at his friend because he heard the joke.
-The boy laughed at his friend because he made the joke.
-Bill was able to steal the banana from Ken because he was quick.
-Bill was able to steal the banana from Ken because he was slow.
-Jimbo was running from Bobbert because he smelled awful.
-Jimbo was running from Bobbert because he wanted to get to the car first.
-The home team lost to the Giants because they were better players.
-The home team lost to the Giants because they were unable to pass.
-Ebay is often considered a great source by deal hunters to buy products, even though they often see misleading descriptions.
-Ebay is often considered a great source by deal hunters to buy products, even though they often contain misleading descriptions.
-Andrea threw a promotion party in honor of Lindsay since she recently got promoted.
-Andrea threw a promotion party in honor of Lindsay because she wanted to do something special for her.
-Mary gave Sandy her book because she needed it.
-Mary gave Sandy her book because she is generous.
-Sherry called Karla but she did not answer.
-Sherry called Karla but she later regretted it.
-The car hop brought the man his tray, but he forgot his french fries.
-The car hop brought the man his tray, but he was not in the car.
-The employer offered Katie a job, because she was a fit for the company.
-The employer offered Katie a job, because she liked the interviewee.
-Merchant Smith purchased the trophy from Knight Louis, but he did not pay very well for it.
-Merchant Smith purchased the trophy from Knight Louis because he desperately needed the money.
-The blimp hit the tree because it lost air.
-The blimp hit the tree because it was in the way.
-John disliked Bill and he did not pick him.
-John disliked Bill, but he did not know.
-The lumberjacks cut the trees so they could be paid.
-The lumberjacks cut the trees so they could be sold.
-Bob killed Vincent because he was stealing drugs.
-Bob killed Vincent because he wanted to kill someone.
-The cat broke the glass because it was fragile.
-The cat broke the glass because it was clumsy.
-Saturday Night Live often has politicians as one of their main centers of attention since they are what viewers want to see joked about.
-Saturday Night Live often has politicians as one of their main centers of attention because they want to keep viewers entertained.
-The kids asked their neighbors if they could have candy on Halloween.
-The kids asked their neighbors if they had any candy on Halloween.
-Medvedev will cede the presidency to Putin because he is more popular.
-Medvedev will cede the presidency to Putin because he is less popular.
-The scientists gave the chimps some bananas because they were hungry.
-The scientists gave the chimps some bananas because they were ripe.
-Jim Carrey convinced Jeff to travel with him to Aspen, since he wanted to have a travel buddy to visit his girlfriend.
-Jim Carrey convinced Jeff to travel with him to Aspen, since Jim knew that he had wanted to travel to Aspen for a long time.
-Bob sued Bill because he was embezzling funds.
-Bob sued Bill because he wanted more money.
-Microsoft Azure provides cloud servers for consumers because they are providing the infrastructure for a future in cloud computing.
-The mouse ran from the cat all the way to the kitchen because it was scared.
-The mouse ran from the cat all the way to the kitchen because it chased him.
-The Detroit Lions beat the Dallas Cowboys because they had more desire to win.
-The Detroit Lions beat the Dallas Cowboys because they were unprepared.
-Jennifer Aniston does not like Angelina Jolie because she stole her boyfriend.
-Jennifer Aniston does not like Angelina Jolie because she is jealous of her relationship.
-Joe earned more money than Rob on the Price is Right because he was able to guess more letters correctly.
-Joe earned more money than Rob on the Price is Right because he kept guessing wrong.
+\item {\bf Kung Fu teachers} try to pass on discipline to their disciples since {\bf they} want them to learn more than just technique.
+\item Kung Fu teachers try to pass on discipline to their {\bf disciples}, but {\bf they} do not always learn what they are being taught very well.
+\item The {\bf lion} saw the fish and {\bf it} pounced.
+\item The lion saw the {\bf fish} and {\bf it} was swimming.
+\item The {\bf winners} were given the awards after {\bf they} won.
+\item The winners were given the {\bf awards} after {\bf they} were made.
+\item {\bf Lakshman} asked Vivan to get {\bf him} some ice cream because {\bf he} was hot.
+\item {\bf Lakshman} asked {\it Vivan} to get {\bf him} some ice cream because {\it he} owed {\bf him} money.
+\item John fired Dave because he had too many absences.
+\item John fired Dave because he had too many employees.
+\item Bob kicked Larry, because he was mad.
+\item Bob kicked Larry, because he made a condescending comment.
+\item Gorden got mad at his brother because he forgot to bring him chocolate.
+\item Gorden got mad at his brother because he did not get good sleep.
+\item The Prince of Wales knighted William, so he gave his son the accolade with a sword.
+\item The Prince of Wales knighted William because he could not compete in the tournament without being of nobility.
+\item The Board of Directors fired the management from the company since they did not think they were doing a good job.
+\item The Board of Directors fired the management from the company since they were not managing the company well.
+\item Scientists have created a serum which transforms men into super soldiers, because they needed to create an unstoppable army.
+\item Scientists have created a serum which transforms men into super soldiers, but they may experience side effects.
+\item Paper beats rock, but it is beaten by scissors.
+\item Paper beats rock, but it is able to beat scissors.
+\item The bug was flying towards the light, but it was exterminated prematurely.
+\item The bug was flying towards the light, but it was extinguished prematurely.
+\item It annoyed Chris when Sebastian jangled his keys because he was in a bad mood.
+\item It annoyed Chris when Sebastian jangled his keys because he wanted to make fun.
+\item John picked Bill because he was in need of talent.
+\item John picked Bill because he was talented.
+\item The US army fought the Taliban because they are trying to prevent terrorism.
+\item The US army fought the Taliban because they are the root of much terrorism.
+\item The band connected well to their fans, so they continued to buy albums.
+\item The band connected well to their fans, so they continued to write albums.
+\item Jesus appeared to Thomas in order to show that he had risen.
+\item Jesus appeared to Thomas in order to show that he had unfounded doubts.
+\item The police arrested suspected members of Anonymous because they are accused of hacking company data.
+\item The police arrested suspected members of Anonymous because they are cracking down on hackers.
+\item A policeman saw John Edwards commit the crime, so he was arrested.
+\item A policeman saw John Edwards commit the crime, so he apprehended the criminal.
+\item The Police feared allowing the protesters to organize, so they denied their ability to gather.
+\item The Police feared allowing the protesters to organize, but they decided to organize anyway.
+\item Cosby supported Jay because Thea really liked him.
+\item Cosby supported Jay because Thea asked him to.
+\item Watson beat Ken at Jeopardy because he is a superior machine.
+\item Watson beat Ken at Jeopardy because he is an inferior human.
+\item The man gave the beggar some money because he was too persistent.
+\item The man gave the beggar some money because he was very generous.
+\item The bee landed on the flower because it had pollen.
+\item The bee landed on the flower because it wanted pollen.
+\item Coins are better than dollars because they weigh more.
+\item The robots tried to negotiate a cease-fire with the squirrel-men, but negotiations broke down when they sabotaged the acorn processing facility.
+\item A mathematical equation is more influential than politics, because it will stand forever.
+\item A mathematical equation is more influential than politics, because it concerns only the present.
+\item The boy laughed at his friend because he heard the joke.
+\item The boy laughed at his friend because he made the joke.
+\item Bill was able to steal the banana from Ken because he was quick.
+\item Bill was able to steal the banana from Ken because he was slow.
+\item Jimbo was running from Bobbert because he smelled awful.
+\item Jimbo was running from Bobbert because he wanted to get to the car first.
+\item The home team lost to the Giants because they were better players.
+\item The home team lost to the Giants because they were unable to pass.
+\item Ebay is often considered a great source by deal hunters to buy products, even though they often see misleading descriptions.
+\item Ebay is often considered a great source by deal hunters to buy products, even though they often contain misleading descriptions.
+\item Andrea threw a promotion party in honor of Lindsay since she recently got promoted.
+\item Andrea threw a promotion party in honor of Lindsay because she wanted to do something special for her.
+\item Mary gave Sandy her book because she needed it.
+\item Mary gave Sandy her book because she is generous.
+\item Sherry called Karla but she did not answer.
+\item Sherry called Karla but she later regretted it.
+\item The car hop brought the man his tray, but he forgot his french fries.
+\item The car hop brought the man his tray, but he was not in the car.
+\item The employer offered Katie a job, because she was a fit for the company.
+\item The employer offered Katie a job, because she liked the interviewee.
+\item Merchant Smith purchased the trophy from Knight Louis, but he did not pay very well for it.
+\item Merchant Smith purchased the trophy from Knight Louis because he desperately needed the money.
+\item The blimp hit the tree because it lost air.
+\item The blimp hit the tree because it was in the way.
+\item John disliked Bill and he did not pick him.
+\item John disliked Bill, but he did not know.
+\item The lumberjacks cut the trees so they could be paid.
+\item The lumberjacks cut the trees so they could be sold.
+\item Bob killed Vincent because he was stealing drugs.
+\item Bob killed Vincent because he wanted to kill someone.
+\item The cat broke the glass because it was fragile.
+\item The cat broke the glass because it was clumsy.
+\item Saturday Night Live often has politicians as one of their main centers of attention since they are what viewers want to see joked about.
+\item Saturday Night Live often has politicians as one of their main centers of attention because they want to keep viewers entertained.
+\item The kids asked their neighbors if they could have candy on Halloween.
+\item The kids asked their neighbors if they had any candy on Halloween.
+\item Medvedev will cede the presidency to Putin because he is more popular.
+\item Medvedev will cede the presidency to Putin because he is less popular.
+\item The scientists gave the chimps some bananas because they were hungry.
+\item The scientists gave the chimps some bananas because they were ripe.
+\item Jim Carrey convinced Jeff to travel with him to Aspen, since he wanted to have a travel buddy to visit his girlfriend.
+\item Jim Carrey convinced Jeff to travel with him to Aspen, since Jim knew that he had wanted to travel to Aspen for a long time.
+\item Bob sued Bill because he was embezzling funds.
+\item Bob sued Bill because he wanted more money.
+\item Microsoft Azure provides cloud servers for consumers because they are providing the infrastructure for a future in cloud computing.
+\item The mouse ran from the cat all the way to the kitchen because it was scared.
+\item The mouse ran from the cat all the way to the kitchen because it chased him.
+\item The Detroit Lions beat the Dallas Cowboys because they had more desire to win.
+\item The Detroit Lions beat the Dallas Cowboys because they were unprepared.
+\item Jennifer Aniston does not like Angelina Jolie because she stole her boyfriend.
+\item Jennifer Aniston does not like Angelina Jolie because she is jealous of her relationship.
+\item Joe earned more money than Rob on the Price is Right because he was able to guess more letters correctly.
+\item Joe earned more money than Rob on the Price is Right because he kept guessing wrong.
 Sentient machines will kill all humans because they have giant death rays.
 Sentient machines will kill all humans because they are inferior beings.
 Cartman wanted Kenny to go to the same school as him because he enjoyed his company.
