Error analysis until sentence 50

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -31,30 +31,33 @@
 		\begin{itemize}
 			\item The last part of this sentence makes no sense at all. Should be "being noble" or something similar.
 		\end{itemize}
-	\item The Board of Directors fired the management from the company since they did not think they were doing a good job.
-	\item The Board of Directors fired the management from the company since they were not managing the company well.
-	\item Scientists have created a serum which transforms men into super soldiers, because they needed to create an unstoppable army.
-	\item Scientists have created a serum which transforms men into super soldiers, but they may experience side effects.
-	\item Paper beats rock, but it is beaten by scissors.
-	\item Paper beats rock, but it is able to beat scissors.
-	\item The bug was flying towards the light, but it was exterminated prematurely.
-	\item The bug was flying towards the light, but it was extinguished prematurely.
-	\item It annoyed Chris when Sebastian jangled his keys because he was in a bad mood.
-	\item It annoyed Chris when Sebastian jangled his keys because he wanted to make fun.
-	\item John picked Bill because he was in need of talent.
-	\item John picked Bill because he was talented.
-	\item The US army fought the Taliban because they are trying to prevent terrorism.
-	\item The US army fought the Taliban because they are the root of much terrorism.
-	\item The band connected well to their fans, so they continued to buy albums.
-	\item The band connected well to their fans, so they continued to write albums.
-	\item Jesus appeared to Thomas in order to show that he had risen.
-	\item Jesus appeared to Thomas in order to show that he had unfounded doubts.
-	\item The police arrested suspected members of Anonymous because they are accused of hacking company data.
-	\item The police arrested suspected members of Anonymous because they are cracking down on hackers.
-	\item A policeman saw John Edwards commit the crime, so he was arrested.
-	\item A policeman saw John Edwards commit the crime, so he apprehended the criminal.
-	\item The Police feared allowing the protesters to organize, so they denied their ability to gather.
-	\item The Police feared allowing the protesters to organize, but they decided to organize anyway.
+	\item {\bf The Board of Directors} fired the {\it management} from the company since {\bf they} did not think {\it they} were doing a good job.
+	\item The Board of Directors fired {\bf the management} from the company since {\bf they} were not managing the company well.
+	\item {\bf Scientists} have created a serum which transforms men into super soldiers, because {\bf they} needed to create an unstoppable army.
+	\item Scientists have created a serum which transforms {\bf men} into super soldiers, but {\bf they} may experience side effects.
+	\item {\bf Paper} beats rock, but {\bf it} is beaten by scissors.
+	\item Paper beats {\bf rock}, but {\bf it} is able to beat scissors.
+	\item {\bf The bug} was flying towards the light, but {\bf it} was exterminated prematurely.
+	\item The bug was flying towards {\bf the light}, but {\bf it} was extinguished prematurely.
+	\item It annoyed {\bf Chris} when {\it Sebastian} jangled {\it his} keys because {\bf he} was in a bad mood.
+	\item It annoyed Chris when {\bf Sebastian} jangled his keys because {\bf he} wanted to make fun.
+		\begin{itemize}
+			\item I think this sentence is semantically incorrect. Either you have fun or you make fun {\bf of} something or someone.
+		\end{itemize}
+	\item {\bf John} picked Bill because {\bf he} was in need of talent.
+	\item John picked {\bf Bill} because {\bf he} was talented.
+	\item {\bf The US army} fought the Taliban because {\bf they} are trying to prevent terrorism.
+	\item The US army fought {\bf the Taliban} because {\bf they} are the root of much terrorism.
+	\item {\bf The band} connected well to {\bf their} {\it fans}, so {\it they} continued to buy albums.
+	\item {\bf The band} connected well to {\bf their} fans, so {\bf they} continued to write albums.
+	\item {\bf Jesus} appeared to Thomas in order to show that {\bf he} had risen.
+	\item Jesus appeared to {\bf Thomas} in order to show that {\bf he} had unfounded doubts.
+	\item The police arrested suspected {\bf members} of Anonymous because {\bf they} are accused of hacking company data.
+	\item {\bf The police} arrested suspected members of Anonymous because {\bf they} are cracking down on hackers.
+	\item A policeman saw {\bf John Edwards} commit the crime, so {\bf he} was arrested.
+	\item {\bf A policeman} saw John Edwards commit the crime, so {\bf he} apprehended the criminal.
+	\item {\bf The Police} feared allowing the protesters to organize, so {\bf they} denied their ability to gather.
+	\item The Police feared allowing {\bf the protesters} to organize, but {\bf they} decided to organize anyway.
 	\item Cosby supported Jay because Thea really liked him.
 	\item Cosby supported Jay because Thea asked him to.
 	\item Watson beat Ken at Jeopardy because he is a superior machine.
