Error analysis update, sentence 63

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -58,29 +58,29 @@
 	\item {\bf A policeman} saw John Edwards commit the crime, so {\bf he} apprehended the criminal.
 	\item {\bf The Police} feared allowing the protesters to organize, so {\bf they} denied their ability to gather.
 	\item The Police feared allowing {\bf the protesters} to organize, but {\bf they} decided to organize anyway.
-	\item Cosby supported Jay because Thea really liked him.
-	\item Cosby supported Jay because Thea asked him to.
-	\item Watson beat Ken at Jeopardy because he is a superior machine.
-	\item Watson beat Ken at Jeopardy because he is an inferior human.
-	\item The man gave the beggar some money because he was too persistent.
-	\item The man gave the beggar some money because he was very generous.
-	\item The bee landed on the flower because it had pollen.
-	\item The bee landed on the flower because it wanted pollen.
-	\item Coins are better than dollars because they weigh more.
-	\item The robots tried to negotiate a cease-fire with the squirrel-men, but negotiations broke down when they sabotaged the acorn processing facility.
-	\item A mathematical equation is more influential than politics, because it will stand forever.
-	\item A mathematical equation is more influential than politics, because it concerns only the present.
-	\item The boy laughed at his friend because he heard the joke.
-	\item The boy laughed at his friend because he made the joke.
-	\item Bill was able to steal the banana from Ken because he was quick.
-	\item Bill was able to steal the banana from Ken because he was slow.
-	\item Jimbo was running from Bobbert because he smelled awful.
-	\item Jimbo was running from Bobbert because he wanted to get to the car first.
-	\item The home team lost to the Giants because they were better players.
-	\item The home team lost to the Giants because they were unable to pass.
-	\item Ebay is often considered a great source by deal hunters to buy products, even though they often see misleading descriptions.
-	\item Ebay is often considered a great source by deal hunters to buy products, even though they often contain misleading descriptions.
-	\item Andrea threw a promotion party in honor of Lindsay since she recently got promoted.
+	\item Cosby supported {\bf Jay} because Thea really liked {\bf him}.
+	\item {\bf Cosby} supported Jay because Thea asked {\bf him} to.
+	\item {\bf Watson} beat Ken at Jeopardy because {\bf he} is a superior machine.
+	\item Watson beat {\bf Ken} at Jeopardy because {\bf he} is an inferior human.
+	\item The man gave {\bf the beggar} some money because {\bf he} was too persistent.
+	\item {\bf The man} gave the beggar some money because {\bf he} was very generous.
+	\item The bee landed on {\bf the flower} because {\bf it} had pollen.
+	\item {\bf The bee} landed on the flower because {\bf it} wanted pollen.
+	\item {\bf Coins} are better than dollars because {\bf they} weigh more.
+	\item {\bf The robots} tried to negotiate a cease-fire with the squirrel-men, but negotiations broke down when {\bf they} sabotaged the acorn processing facility.
+	\item {\bf A mathematical equation} is more influential than politics, because {\bf it} will stand forever.
+	\item A mathematical equation is more influential than {\bf politics}, because {\bf it} concerns only the present.
+	\item {\bf The boy} laughed at {\bf his} friend because {\bf he} heard the joke.
+	\item {\bf The boy} laughed at {\bf his} {\it friend} because {\it he} made the joke.
+	\item {\bf Bill} was able to steal the banana from Ken because {\bf he} was quick.
+	\item Bill was able to steal the banana from {\bf Ken} because {\bf he} was slow.
+	\item Jimbo was running from {\bf Bobbert} because {\bf he} smelled awful.
+	\item {\bf Jimbo} was running from Bobbert because {\bf he} wanted to get to the car first.
+	\item The home team lost to {\bf the Giants} because {\bf they} were better players.
+	\item {\bf The home team} lost to the Giants because {\bf they} were unable to pass.
+	\item Ebay is often considered a great source by {\bf deal hunters} to buy products, even though {\bf they} often see misleading descriptions.
+	\item Ebay is often considered a great source by deal hunters to buy {\bf products}, even though {\bf they} often contain misleading descriptions.
+	\item Andrea threw a promotion party in honor of {\bf Lindsay} since {\bf she} recently got promoted.
 	\item Andrea threw a promotion party in honor of Lindsay because she wanted to do something special for her.
 	\item Mary gave Sandy her book because she needed it.
 	\item Mary gave Sandy her book because she is generous.
