Error analysis, sentence 65

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -81,8 +81,8 @@
 	\item Ebay is often considered a great source by {\bf deal hunters} to buy products, even though {\bf they} often see misleading descriptions.
 	\item Ebay is often considered a great source by deal hunters to buy {\bf products}, even though {\bf they} often contain misleading descriptions.
 	\item Andrea threw a promotion party in honor of {\bf Lindsay} since {\bf she} recently got promoted.
-	\item Andrea threw a promotion party in honor of Lindsay because she wanted to do something special for her.
-	\item Mary gave Sandy her book because she needed it.
+	\item {\bf Andrea} threw a promotion party in honor of {\it Lindsay} because {\bf she} wanted to do something special for {\it her}.
+	\item {\bf Mary}  gave {\it Sandy} {\bf her} \underline{book} because {\it she} needed \underline{it}.
 	\item Mary gave Sandy her book because she is generous.
 	\item Sherry called Karla but she did not answer.
 	\item Sherry called Karla but she later regretted it.
